src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_sub_color3.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.sub(&Color3::new(1.0, 0.5, 0.2).into())"
---
Color3:
  - 4
  - 4.5
  - 4.8
