src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_sub_rect.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.sub(&Rect::new(Vector2::new(5.0, 10.0),\nVector2::new(15.0, 20.0)).into())"
---
Rect:
  - - 0
    - -5
  - - -10
    - -15
