src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_sub_udim2.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.sub(&UDim2::new(UDim::new(10.0, 32), UDim::new(10.0, 32)).into())"
---
UDim2:
  - - -5
    - -32
  - - -5
    - -32
