src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_sub_vector2.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.sub(&Vector2::new(5.0, 15.0).into())"
---
Vector2:
  - 0
  - -10
