src/math_ops/snapshots/rbx_types_ops__math_ops__float32__f32_sub_vector2int16.snap
---
source: src/math_ops/float32.rs
expression: "5.0f32.sub(&Vector2int16::new(5, 15).into())"
---
Vector2int16:
  - 0
  - -10
